commit login and password

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1076,7 +1076,7 @@
                                 <small class="text-muted" id="email-help">Enter a valid email address</small>
                             </div>
                             <div class="input-group password-input-group">
-                                <input type="password" class="form-control" id="password" name="password" placeholder=" " required>
+                                <input type="password" class="form-control" id="password" name="password" placeholder=" Enter your Password " required>
                                 <button type="button" class="password-toggle" id="passwordToggle" aria-label="Toggle password visibility">
                                     <span class="eye-icon bi bi-eye"></span>
                                 </button>
