--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -591,7 +591,7 @@
                         <table class="table table-hover mb-0 dashboard-table">
                             <tbody>
                                 {% for project in recent_projects %}
-                                <tr style="cursor:pointer;" onclick="window.location='{{ url_for('view_project', id=project.id) }}'">
+                                <tr style="cursor:pointer;" data-href="{{ url_for('view_project', id=project.id) }}" onclick="window.location=this.dataset.href;">
                                     <td>
                                         <div class="project-item">
                                             <div class="avatar-circle">
